# SegmentVideo

./: MIGRATION.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.py  run.sh  run_chain.py  setup.py
examples/: demo_complex_rotation.py  example_ellipsoid.py  example_workflow.py  test_ui.py
lib/: annotation.py  cv.py  video.py
segmentvideo/: __init__.py
segmentvideo/annotation/: __init__.py  state.py
segmentvideo/io/: __init__.py  video_loader.py
segmentvideo/models/: __init__.py  base.py  curve.py  ellipsoid.py
segmentvideo/utils/: __init__.py  watershed.py
segmentvideo/workflows/: __init__.py  segmentation.py
